--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 .body {
-  background-color: #2c2c2d;
+  background-color: #2c475a;
+  border-left: 30px solid #efe7d7;
+  border-right: 30px solid #efe7d7;
 }
 
 .flatpickr-day.disabled {
@@ -20,31 +22,48 @@
 
 .navbar-brand,
 .nav-link {
-  color: #c7cecd !important;
+  color: #466273 !important;
+}
+
+.nav-agenda{
+  display: flex;
+}
+
+.logo-anchor{
+  height: 57px;
+  display: flex;
+}
+
+.text-agenda{
+  display: flex;
+  padding-top: 8px;
+  padding-left: 5px;
+  font-weight: bold;
+  font-style: italic;
+  font-family: inherit;
 }
 
 .btn-custom {
-  background-color: #b2b6b5;
+  background-color: #c59879;
   color: #000;
   border: none;
   font-weight: bold;
 }
 
 .btn-custom:hover {
-  background-color: #b2b6b5; /* Un tono más oscuro para el efecto hover */
+  background-color: #f0d6bc; /* Un tono más oscuro para el efecto hover */
 }
 
 .custom-header {
-  background-color: #000000; /* Negro */
+  background-color: #efe7d7;
 }
 
 .boton-tatuadores,
 .boton-estilos,
 .boton-zonas,
 .boton-agendar {
-  background-color: #b2b6b5;
+  background-color: #c59879;
   color: rgb(0, 0, 0);
-  border-radius: 12px;
   padding: 10px 20px;
   margin: 7px;
   border: none;
@@ -54,13 +73,26 @@
   font-weight: bold;
 }
 
-#tatuadorButtons,
-#tipoTatuajeButtons,
-#zonaTatuajeButtons {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+.boton-tatuadores:hover,
+.boton-estilos:hover,
+.boton-zonas:hover,
+.boton-agendar:hover {
+  background-color: #f0d6bc;
 }
+
+.boton-tatuadores:focus,
+.boton-estilos:focus,
+.boton-zonas:focus,
+.boton-agendar:focus,
+.boton-tatuadores:active,
+.boton-estilos:active,
+.boton-zonas:active,
+.boton-agendar:active {
+  background-color: #f8f2e6; 
+  color: #2c475a; 
+}
+
+
 
 /* Ajustes para Pantallas Pequeñas */
 @media (max-width: 576px) {
@@ -96,6 +128,8 @@
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: #b2b6b5;
   flex-wrap: wrap;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .boton-tatuador,
@@ -105,6 +139,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .calendario-container {
@@ -129,9 +164,11 @@
 }
 
 .carousel {
-  margin-top: 15px;
-  margin-bottom: 15px;
-  max-width: 850px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1200px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -139,7 +176,7 @@
 
 .selector-hora {
   margin-top: 15px;
-  margin-bottom: 15px;
+  margin-bottom: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -147,10 +184,12 @@
 
 .form-container {
   border: 5px solid #c0c3c3; 
-  border-radius: 8px; 
+  border-radius: none; 
   margin: auto;
-  max-width: 400px; 
-  background-color: #403e3e; 
+  max-width: 900px; 
+  background-color: #efe7d7; 
+  margin-top: 15px;
+  margin-bottom: 15px;
 
 }
 
@@ -164,8 +203,7 @@
 .form-container textarea {
   width: 100%; 
   padding: 8px;
-  border-radius: 4px; 
-  border: 1px solid #ccc; 
+  border: 1px solid #968585; 
   margin-bottom: 15px; 
 }
 
@@ -173,9 +211,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #b2b6b5;
-  color: rgb(0, 0, 0);
-  border-radius: 12px;
   padding: 10px 20px;
   margin: 7px;
   border: none;
@@ -183,4 +218,39 @@
   text-align: center;
   font-weight: bold;
   cursor: pointer; 
+}
+
+.footer-custom {
+  background-color: #efe7d7; 
+  color: #466273; 
+  padding: 20px 0;
+  text-align: justify;
+}
+
+.footer-custom a {
+  color: #466273; 
+  text-decoration: none; 
+}
+
+.footer-custom a:hover {
+  color: #c59879; /* Color de los enlaces al pasar el ratón */
+}
+
+.footer-custom .social-icons i {
+  color: #ffffff; /* Color de los iconos sociales */
+}
+
+.footer-custom .social-icons i:hover {
+  color: #ffcc00; /* Color de los iconos sociales al pasar el ratón */
+}
+
+.boton-google {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  max-width: 300px; 
+  margin: 0 auto;
+}
+.g_id_signin{
+  background-color: #efe7d7;
 }
