se acomodo el formato de algunas cosas

--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@
 }
 
 .footer-custom {
-  background-color: #efe7d7; 
+  background-color: white; 
   color: #466273; 
   padding: 20px 0;
   text-align: justify;
