--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@
 }
 
 .footer-custom .social-icons i {
-  color: #ffffff; /* Color de los iconos sociales */
+  color: #673737; /* Color de los iconos sociales */
 }
 
 .footer-custom .social-icons i:hover {
