--- a/style.css
+++ b/style.css
@@ -72,13 +72,18 @@
   text-align: center;
   font-weight: bold;
 }
-
+/*
 .boton-tatuadores:hover,
 .boton-estilos:hover,
 .boton-zonas:hover,
 .boton-agendar:hover {
   background-color: #f0d6bc;
+}*/
+
+.btn-selected {
+  background-color: #f8f2e6;
 }
+
 
 .boton-tatuadores:focus,
 .boton-estilos:focus,
